--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,19 @@
 @import "tailwindcss";
 
 .container {
-  @apply mx-auto px-4;
+  @apply mx-auto px-2 lg:px-4;
+}
+
+.section {
+  @apply py-20;
+}
+
+.btn {
+  @apply text-white border-2 border-white px-4 py-2 rounded-lg   transition-all duration-300 cursor-pointer hover:bg-white hover:text-black;
 }
 
 .links {
-  @apply hover:border-white border-2 border-transparent px-4 py-2 rounded-lg transition-all duration-300 cursor-pointer;
+  @apply hover:border-white border-2 border-transparent px-2 py-1 rounded-lg transition-all duration-300 cursor-pointer;
 }
 
 .font-oswald {
@@ -16,4 +24,7 @@
 }
 .font-anton {
   font-family: "Anton", sans-serif;
+}
+.font-imperial {
+  font-family: cursive;
 }
