--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,15 @@
 @import "tailwindcss";
 
+body {
+  @apply bg-black;
+}
+
 .container {
   @apply mx-auto px-2 lg:px-4;
 }
 
 .section {
-  @apply py-20;
+  @apply pt-20;
 }
 
 .btn {
@@ -16,6 +20,9 @@
   @apply hover:border-white border-2 border-transparent px-2 py-1 rounded-lg transition-all duration-300 cursor-pointer;
 }
 
+.arrows {
+  @apply cursor-pointer absolute  top-1/2 -translate-y-1/2 bg-white text-black p-2 rounded-full shadow-md z-10 hover:bg-[#e5e5e5e5];
+}
 .font-oswald {
   font-family: "Oswald", sans-serif;
 }
