--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-  @apply bg-black;
+  @apply bg-black text-white;
 }
 
 .container {
@@ -13,11 +13,11 @@ body {
 }
 
 .section {
-  @apply py-20;
+  @apply py-16;
 }
 
 .btn {
-  @apply text-white border-2 border-white px-4 py-2 rounded-lg   transition-all duration-300 cursor-pointer hover:bg-white hover:text-black;
+  @apply text-white border-2 border-white px-4 py-2 rounded-lg font-semibold  transition-all duration-300 cursor-pointer hover:bg-white hover:text-black;
 }
 
 .sec-btn {
@@ -30,6 +30,18 @@ body {
 .arrows {
   @apply cursor-pointer absolute  top-1/2 -translate-y-1/2 bg-white text-black p-2 rounded-full shadow-md z-10 hover:bg-[#e5e5e5e5] transition-all duration-300;
 }
+
+.contact-container {
+  @apply flex flex-col items-start;
+}
+
+.contact-label {
+  @apply text-lg font-semibold mb-2;
+}
+.contact-input {
+  @apply h-10 w-full bg-transparent border-2 border-white px-4 rounded-lg focus:outline-none;
+}
+
 .font-oswald {
   font-family: "Oswald", sans-serif;
 }
